# stm32-embassy

./: .gitignore  Dockerfile  README.md  docker-compose.yml  start.sh
docs/: picoprobe.md  tools.md  troubleshooting.md
docs/design/: color-led.md  motor-control.md
projects/color-led/: Cargo.toml  rust-toolchain.toml
projects/color-led/.cargo/: config.toml
projects/color-led/src/: main.rs
projects/led-blink/: Cargo.toml
projects/led-blink/.cargo/: config.toml
projects/led-blink/src/: main.rs
tools/: rs2html.py
